[package]
name = "handle"
version = "1.0.2"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
description = "A Handle Trait for asynchronous context pipeline."
homepage = "https://github.com/viz-rs/handle"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dev-dependencies]
futures = "0.3"
anyhow = "1.0"
async-std = { version = "1.10", features = ["attributes"] }
